--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "neo4j-driver": "^5.28.1"
+    "jsonwebtoken": "^9.0.2",
+    "neo4j-driver": "^5.28.1",
+    "uuid": "^11.1.0"
   }
 }
