--- a/compose.yaml
+++ b/compose.yaml
@@ -14,8 +14,8 @@ services:
 
   app:
     build: 
-      context: ./
-      dockerfile: backend/Dockerfile
+      context: ./backend/
+      dockerfile: Dockerfile
     container_name: bun_app
     volumes:
       - ./backend:/app
